Enable Organizer Profile Editing and Standardize Navigation - Extended access to the profile editing page to organizers, allowing them to update their profiles, a feature previously exclusive to officials. - Implemented the burger button navigation across all screen sizes to provide a consistent user experience. - Removed the classic navbar to streamline the navigation interface and align with the new design approach. - Enhanced the overall user experience by providing a unified navigation method for all users, regardless of screen size. - Refactored navigation-related components to support these changes and ensure smooth transitions between pages.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,6 +100,6 @@
 
 @layer components {
   .link {
-    @apply text-primary font-bold text-lg border-transparent border-b-2 transition-colors hover:border-secondary delay-0 ease-in-out;
+    @apply text-primary font-bold text-2xl border-transparent border-b-2 transition-colors hover:border-secondary delay-0 ease-in-out;
   }
 }
